--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -8,10 +8,11 @@
     <div style='float:left'>
         <pre th:utext="${board}">보드판</pre>
     </div>
-    <form style='float:right;margin-right:200px;margin-top:200px' action="game.html" method="post">
+    <form style='float:right;margin-right:200px;margin-top:200px' th:action="@{/game}" action="game.html" method="post">
         <div>
             <label for="piece">선택할 기물:</label>
-            <input type="text" id="piece" placeholder="좌표를 입력하세요">
+            <input type="text" id="piece" name="strPiece" placeholder="좌표를 입력하세요">
+            <button type="submit">입력</button>
         </div>
     </form>
 </body>
